# moocho

./: CMakeLists.txt  Makefile.am  Makefile.export.moocho.in  Makefile.in  MakefileExeStub.mak  RELEASE_NOTES  configure  configure.ac
src/: CMakeLists.txt  Makefile.am  Makefile.in  Moocho_Config.h.in  Moocho_ConfigDefs.hpp
src/AbstractLinAlgPack/doc/: Doxyfile.stub
src/AbstractLinAlgPack/refactoring/: new-header-includes.20051208.txt
src/AbstractLinAlgPack/src/: AbstractLinAlgPack.dxx  AbstractLinAlgPack_PublicTypes.ud  AbstractLinAlgPack_Types.hpp
src/ConstrainedOptPack/src/: ConstrainedOptPack.dxx  ConstrainedOptPack_PublicTypes.ud  ConstrainedOptPack_Types.hpp
src/DenseLinAlgPack/doc/: Doxyfile.stub
src/DenseLinAlgPack/refactoring/: new-header-includes.20051208.txt
src/DenseLinAlgPack/src/: BLAS_Cpp.dxx  DenseLinAlgLAPack.cpp  DenseLinAlgLAPack.hpp  DenseLinAlgLAPack_Types.hpp  DenseLinAlgPack.dxx  DenseLinAlgPack_AssertOp.cpp  DenseLinAlgPack_AssertOp.hpp  DenseLinAlgPack_BLAS_Cpp.cpp  DenseLinAlgPack_BLAS_Cpp.hpp  DenseLinAlgPack_DMatrixAsTriSym.hpp  DenseLinAlgPack_DMatrixAssign.hpp  DenseLinAlgPack_DMatrixClass.cpp  DenseLinAlgPack_DMatrixClass.hpp  DenseLinAlgPack_DMatrixIn.hpp  DenseLinAlgPack_DMatrixInFunc.cpp  DenseLinAlgPack_DMatrixInFunc.hpp  DenseLinAlgPack_DMatrixOp.hpp  DenseLinAlgPack_DMatrixOpBLAS.cpp  DenseLinAlgPack_DMatrixOpBLAS.hpp  DenseLinAlgPack_DMatrixOut.hpp  DenseLinAlgPack_DMatrixOutFunc.cpp  DenseLinAlgPack_DMatrixOutFunc.hpp  DenseLinAlgPack_DVectorAssign.hpp  DenseLinAlgPack_DVectorClass.hpp  DenseLinAlgPack_DVectorClassExt.hpp  DenseLinAlgPack_DVectorClassTmpl.cpp  DenseLinAlgPack_DVectorClassTmpl.hpp  DenseLinAlgPack_DVectorIn.hpp  DenseLinAlgPack_DVectorInFunc.cpp  DenseLinAlgPack_DVectorInFunc.hpp  DenseLinAlgPack_DVectorOp.hpp  DenseLinAlgPack_DVectorOpBLAS.cpp  DenseLinAlgPack_DVectorOut.hpp  DenseLinAlgPack_DVectorOutFunc.cpp  DenseLinAlgPack_DVectorOutFunc.hpp  DenseLinAlgPack_ElementaryMatVec.hpp  DenseLinAlgPack_IO.hpp  DenseLinAlgPack_IOBasic.hpp  DenseLinAlgPack_IOFormat.cpp  DenseLinAlgPack_IOFormat.hpp  (+38 more)
src/IterationPack/doc/: Doxyfile.stub
src/IterationPack/refactoring/: from-old-to-trilinos.20051207.sh  new-header-includes.20051207.txt  old-to-new-filenames.20051207.txt
src/IterationPack/src/: IterationPack.dxx  IterationPack_Algorithm.cpp  IterationPack_Algorithm.hpp  IterationPack_AlgorithmSetOptions.cpp  IterationPack_AlgorithmSetOptions.hpp  IterationPack_AlgorithmState.cpp  IterationPack_AlgorithmState.hpp  IterationPack_AlgorithmStep.hpp  IterationPack_AlgorithmTracker.cpp  IterationPack_AlgorithmTracker.hpp  IterationPack_AlgorithmTrackerComposite.cpp  IterationPack_AlgorithmTrackerComposite.hpp  IterationPack_CastIQMember.cpp  IterationPack_CastIQMember.hpp  IterationPack_IterQuantity.cpp  IterationPack_IterQuantity.hpp  IterationPack_IterQuantityAccess.hpp  IterationPack_IterQuantityAccessContiguous.hpp  IterationPack_IterQuantityAccessContiguousDecl.hpp  IterationPack_IterQuantityAccessContiguousDef.hpp  IterationPack_PublicTypes.ud  IterationPack_Types.hpp  IterationPack_cast_iq.cpp  IterationPack_cast_iq.hpp  IterationPack_print_algorithm_step.cpp  IterationPack_print_algorithm_step.hpp
src/MoochoPack/: MoochoPack.dxx
src/MoochoPack/configurations/: Moocho.opt.MoochoSolver  MoochoPack_MoochoSolver.cpp  MoochoPack_MoochoSolver.hpp  generate-opt-file.pl
src/MoochoPack/perl/: MoochoVaryOptions.pm  runnlps.pl
src/MoochoPack/src/: MoochoPack_Exceptions.hpp  MoochoPack_IpState.cpp  MoochoPack_IpState.hpp  MoochoPack_NLPAlgo.cpp  MoochoPack_NLPAlgo.hpp  MoochoPack_NLPAlgoClientInterface.hpp  MoochoPack_NLPAlgoConfig.hpp  MoochoPack_NLPAlgoContainer.cpp  MoochoPack_NLPAlgoContainer.hpp  MoochoPack_NLPAlgoInterface.hpp  MoochoPack_NLPAlgoState.cpp  MoochoPack_NLPAlgoState.hpp  MoochoPack_NLPSolverClientInterface.cpp  MoochoPack_NLPSolverClientInterface.hpp  MoochoPack_NLPSolverClientInterfaceSetOptions.cpp  MoochoPack_NLPSolverClientInterfaceSetOptions.hpp  MoochoPack_Types.hpp  MoochoPack_moocho_algo_conversion.hpp
src/MoochoUtilities/doc/: Doxyfile.stub  TagFiles
src/MoochoUtilities/refactoring/: filename-change-list.txt.20051206  from-old-to-trilinos.20051206.sh
src/MoochoUtilities/src/: BLAS_Cpp_Types.hpp  CrtDbgReport.cpp  CrtSetDbgFlag.cpp  FortranCppStrings.f  FortranTypes_CppFortranStrings.cpp  FortranTypes_CppFortranStrings.hpp  FortranTypes_f_open_file.cpp  FortranTypes_f_open_file.hpp  InputStreamHelperPack_EatInputComment.cpp  InputStreamHelperPack_EatInputComment.hpp  OptionsFromStreamPack_CommandLineOptionsFromStreamProcessor.cpp  OptionsFromStreamPack_CommandLineOptionsFromStreamProcessor.hpp  OptionsFromStreamPack_OptionsFromStream.cpp  OptionsFromStreamPack_OptionsFromStream.hpp  OptionsFromStreamPack_OptionsFromStreamExceptions.hpp  OptionsFromStreamPack_SetOptionsFromStream.hpp  OptionsFromStreamPack_SetOptionsFromStreamNode.cpp  OptionsFromStreamPack_SetOptionsFromStreamNode.hpp  OptionsFromStreamPack_SetOptionsToTargetBase.hpp  OptionsFromStreamPack_StringToBool.cpp  OptionsFromStreamPack_StringToBool.hpp  OptionsFromStreamPack_StringToIntMap.cpp  OptionsFromStreamPack_StringToIntMap.hpp  ProfileHackPack_profile_hack.cpp  ProfileHackPack_profile_hack.hpp  RangePack_Range1D.cpp  RangePack_Range1D.hpp  ReleaseResource.hpp  ReleaseResource_ref_count_ptr.hpp  SerializationPack_Serializable.hpp  SpecialASCII.hpp  StandardAggregationMacros.hpp  StandardCompositionRelationshipsPack.hpp  StopWatchPack_stopwatch.cpp  StopWatchPack_stopwatch.hpp  StrideIterPack_StrideIter.hpp  TestingHelperPack_update_success.cpp  TestingHelperPack_update_success.hpp  ff_open_file.f
src/NLPInterfacePack/doc/: Doxyfile.stub
src/NLPInterfacePack/src/: NLPInterfacePack.dxx  NLPInterfacePack_PublicTypes.ud  NLPInterfacePack_Types.hpp
src/RTOpPack/doc/: Doxyfile.stub
src/RTOpPack/refactoring/: from-old-to-trilinos.20051207.sh  new-headers-includes.20051207.txt
thyra/example/NLPThyraEpetraAdvDiffReactOpt/: CMakeLists.txt  GLpApp_AdvDiffReactOptModel.cpp  GLpApp_AdvDiffReactOptModel.hpp  Makefile.am  (+25 more)
(+918 files in other folders)
