
INCLUDE(PackageMacros)
INCLUDE(AddOptionAndDefine)

PACKAGE(MOOCHO)

ADD_SUBDIRECTORY(src)

ASSERT_DEFINED(${PACKAGE_NAME}_ENABLE_Thyra)
IF (${PACKAGE_NAME}_ENABLE_Thyra)
  ADD_SUBDIRECTORY(thyra)
ENDIF()

PACKAGE_ADD_EXAMPLE_DIRECTORIES(example)

PACKAGE_ADD_TEST_DIRECTORIES(test)

PACKAGE_POSTPROCESS()
